added additional headings and image

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <body>
 	<h1>Discover hidden places in the world around you</h1>
 	<h5>Download Excursion (Coming soon!)</h5>
+	<img id='iphone' src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt='iphone'>
+	<h2>Your personal travel guide</h2>
+	<p>Excursion remembers places you like, and recommends new points of interest around you.</p>
 
 </body>
 </html>
