--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
 <body>
 	<h1>Discover hidden places in the world around you</h1>
 	<h5>Download Excursion (Coming soon!)</h5>
-	<img id='iphone' src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt='iphone'>
+
+	<video width="320" height="240">
+  <source src= 'C:\excursion\resources\videos'></video>
+	
 	<h2>Your personal travel guide</h2>
 	<p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-
+	<img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="tent" class='tent'>
+	<br>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt='iphone'class='iphone'>
+    <h2>Coming soon for iPhone and Android</h2>
+    <h5>Download Excursion (Coming soon!)</h5>
 </body>
 </html>
