--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 	<h1>Discover hidden places in the world around you</h1>
 	<h5>Download Excursion (Coming soon!)</h5>
 
-	<video width="320" height="240">
-  <source src= 'C:\excursion\resources\videos'></video>
+	<video autoplay="" muted="" loop="">
+      <source src="resources/videos/excursion.mp4" type="video/mp4" class='vid'>
+    </video>
 	
 	<h2>Your personal travel guide</h2>
 	<p>Excursion remembers places you like, and recommends new points of interest around you.</p>
@@ -18,5 +19,6 @@
     <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt='iphone'class='iphone'>
     <h2>Coming soon for iPhone and Android</h2>
     <h5>Download Excursion (Coming soon!)</h5>
+    
 </body>
 </html>
